fixed description length, now if is too long it wont be on 1 line but on multiple ones

--- a/client/src/components/auctions/details.module.css
+++ b/client/src/components/auctions/details.module.css
@@ -86,6 +86,7 @@
   text-align: justify;
   margin-bottom: 30px;
   margin-left: 2em;
+  overflow-wrap: break-word;
 }
 
 .descriptionTitle {
